hero section and card component

--- a/qtify/src/Component/Navigation/Navigation.css
+++ b/qtify/src/Component/Navigation/Navigation.css
@@ -20,7 +20,7 @@
   padding-right: 0.2rem;
   border-radius: 8px, 0px, 0px, 8px;
 }
-img {
+.nav-logo {
   height: 34px;
   width: 60px;
   padding-left: 1rem;
