--- a/qtify/src/Component/Navigation/Navigation.css
+++ b/qtify/src/Component/Navigation/Navigation.css
@@ -1,7 +1,7 @@
 .navbar {
   background-color: var(--css-primary);
   height: 74px;
-  width: 100vw;
+  width: 100%;
   padding-left: 0.2rem;
   padding-right: 0.2rem;
 }
@@ -13,6 +13,7 @@
   color: var(--css-white);
   size: 27px;
   font-weight: 600;
+  margin-right: 1.2rem;
 }
 .textbox {
   background-color: var(--css-white);
@@ -23,7 +24,7 @@
 .nav-logo {
   height: 34px;
   width: 60px;
-  padding-left: 1rem;
+  padding-left: 1.2rem;
 }
 #searchicon {
   background-color: var(--css-white);
