--- a/qtify/src/Component/Section/section.css
+++ b/qtify/src/Component/Section/section.css
@@ -4,12 +4,22 @@
   column-gap: 7px;
   margin-left: 1.2rem;
   margin-right: 1.2rem;
+  position: relative;
 }
 .section-body {
   color: var(--css-white);
 }
 .section-title {
-  font-size: 28px;
+  font-size: 20px;
   margin-left: 2.5rem;
   color: var(--css-white);
+}
+.collapse-state {
+  font-size: 20px;
+  margin-left: 2.5rem;
+  color: var(--css-primary);
+}
+.section-heading {
+  display: flex;
+  justify-content: space-between;
 }
